[workspace]
members = [
  "crates/graph-spec",
  "crates/graph-core",
  "crates/graph-plugin-api",
  "crates/graph-domain-framegraph",
  "crates/graph-domain-shader",
  "crates/graph-domain-script",
  "crates/graph-domain-ai-task",
  "crates/graph-adapter-tenengine",
  "crates/graph-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["TenEngine"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
